GET request successed

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do list</title>
-    <script ></script>
+    <script type="text/javascript" src="vendors/jquery.js"></script>
+    <script type="text/javascript" src="scripts/client.js"></script>
+    <!-- <link rel="stylesheet" href="vendors/bootstrap.css"> -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
-        <h1 class = "header_todo">To-do list</h1>
+        <h1 class="header_todo">To-do list</h1>
     </header>
     <div>
         <p>Give me what have to do</p>
-        <input type = "text" placeholder="Task" id = "inputTask" >
-        <button class = "btn addTask" id ="addBtn" >Add</button>
+        <input type="text" placeholder="Task" id="inputTask">
+        <button class="btn addTask" id="addBtn">Add</button>
     </div>
     <div>
         <p>To-do list</p>
-        <ul id= "listTask">
+        <ul id="listTask">
             <li>task here</li>
         </ul>
 
     </div>
 
 </body>
+
 </html>
