Styling with bootrap

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="scripts/client.js"></script>
     <link rel="stylesheet" href="vendors/bootstrap.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Bungee+Outline&family=Cedarville+Cursive&family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Text&family=Modak&family=Parisienne&family=Patrick+Hand+SC&family=Zilla+Slab+Highlight:wght@700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -16,14 +18,14 @@
         <h1 class="header_todo jumbotron">To-do list</h1>
     </header>
     <div class ="contain">
-        <div class = "inputfield">
+        <div class = "inputfield input-group-append">
             <!-- <p>Give me what have to do</p> -->
             <input type="text" placeholder="Task" id="inputTask">
             <button class="btn addTask" id="addBtn">Add</button>
         </div>
         <div class = "output">
             <h3>List to do</h3>
-            <ul id="listTask">
+            <ul id="listTask" >
             </ul>
     
         </div>
