--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="scripts/client.js"></script>
     <link rel="stylesheet" href="vendors/bootstrap.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Bungee+Outline&family=Cedarville+Cursive&family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Text&family=Modak&family=Parisienne&family=Patrick+Hand+SC&family=Zilla+Slab+Highlight:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Amatic+SC:wght@700&family=Caveat&family=Handlee&family=Homemade+Apple&family=Nanum+Pen+Script&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
 
@@ -24,14 +24,14 @@
             <button class="btn addTask" id="addBtn">Add</button>
         </div>
         <div class = "output">
-            <h3>List to do</h3>
             <ul id="listTask" >
             </ul>
     
         </div>
     </div>
-    
-
+    <footer class = "footer">
+            <p> Create by Thy</p>
+    </footer>
 </body>
 
 </html>
