--- a/server/public/index.html
+++ b/server/public/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <footer class = "footer">
-            <p> Create by Thy</p>
+            <p> Created by Thy</p>
     </footer>
 </body>
 
