--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,14 +19,12 @@
     </header>
     <div class ="contain">
         <div class = "inputfield input-group-append">
-            <!-- <p>Give me what have to do</p> -->
-            <input type="text" placeholder="Task" id="inputTask">
+            <input type="text" placeholder="Add something" id="inputTask">
             <button class="btn addTask" id="addBtn">Add</button>
         </div>
         <div class = "output">
             <ul id="listTask" >
             </ul>
-    
         </div>
     </div>
     <footer class = "footer">
