--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,8 @@
     <title>To-do list</title>
     <script type="text/javascript" src="vendors/jquery.js"></script>
     <script type="text/javascript" src="scripts/client.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <link rel="stylesheet" href="vendors/bootstrap.css">
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Amatic+SC:wght@700&family=Caveat&family=Handlee&family=Homemade+Apple&family=Nanum+Pen+Script&family=Sacramento&display=swap" rel="stylesheet">
@@ -21,6 +23,7 @@
         <div class = "inputfield input-group-append" >
             <input type="text" placeholder="Add something" id="inputTask" >
             <button class="btn addTask" id="addBtn">Add</button>
+
         </div>
         <div class = "output">
             <ul id="listTask" >
