Styling with boostrap

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
     <header>
         <h1 class="header_todo jumbotron">To-do list</h1>
     </header>
-    <div class ="contain">
+    <div class ="container-fluid">
         <div class = "inputfield input-group-append" >
             <input type="text" placeholder="Add something" id="inputTask" >
             <button class="btn addTask" id="addBtn">Add</button>
