--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,16 +18,24 @@
     <header>
         <h1 class="header_todo jumbotron">To-do list</h1>
     </header>
-    <div class ="container-fluid">
-        <div class = "inputfield input-group-append" >
-            <input type="text" placeholder="Add something" id="inputTask" >
-            <button class="btn addTask" id="addBtn">Add</button>
+    <main>
+        <section>
+            <div class = "inputField input-group-append" >
+                <input type="text" placeholder="Add something" id="inputTask" >
+                <button class="btn addTask" id="addBtn">Add</button>
+            </div>
+        </section>
+        <section>
+            <div class = "output">
+                <ul id="listTask" >
+                </ul>
+            </div>
         </div>
-        <div class = "output">
-            <ul id="listTask" >
-            </ul>
-        </div>
-    </div>
+        </section>
+
+    </main>
+        
+        
     <footer class = "footer">
             <p> Created by Thy</p>
     </footer>
