Add header for task list

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -27,6 +27,9 @@
             </div>
         </section>
         <section>
+            <div class = "headerOfList">
+                TASKS
+            </div>
             <div class = "output">
                 <ul id="listTask" >
                 </ul>
