Change type display from list to table

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -31,8 +31,12 @@
                 TASKS
             </div>
             <div class = "output">
-                <ul id="listTask" >
-                </ul>
+                <table>
+                    <tbody id="listTask" >
+                    </tbody>
+                </table>
+                
+                
             </div>
         </div>
         </section>
