--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,11 +33,11 @@
                 TASKS
             </div>
             <div class = "output">
-                <table>
-                    <tbody id="listTask" >
+                <table >
+                    <tbody id="listTask">
+                        <!-- Tasks will go here -->
                     </tbody>
                 </table>
-                
                 
             </div>
         </div>
