--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="vendors/bootstrap.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Amatic+SC:wght@700&family=Caveat&family=Handlee&family=Homemade+Apple&family=Nanum+Pen+Script&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Caveat&family=Handlee&family=Scope+One&family=Nanum+Pen+Script&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
 
