--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,7 +24,7 @@
     <main>
         <section>
             <div class = "inputField input-group-append" >
-                <input type="text" placeholder=" Add something" id="inputTask" >
+                <input type="text" placeholder=" What do I have to do?" id="inputTask" >
                 <button class="btn addTask" id="addBtn">Add</button>
             </div>
             
